rewrite with numpy vectorize

--- a/TopicModeling/topic_modeling_data_preparation.ipynb
+++ b/TopicModeling/topic_modeling_data_preparation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +174,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
+    "data.drop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[(data['Report_Dealer_Index'] != '0') & (data['Contra_Party_Index'] != '99999')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Report_Dealer_Index']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,19 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading data TRACE2014_jinming.pkl...\n",
-      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming.pkl...\n",
-      "Data getting success!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_data(file_name='TRACE2014_jinming.pkl')"
    ]
@@ -265,6 +291,116 @@
     "file_name = 'TRACE2014_jinming'\n",
     "file_path = root_folder / file_name\n",
     "data.to_pickle(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data TRACE2014_jinming.pkl...\n",
+      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming.pkl...\n",
+      "Data getting success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from get_data import load_data\n",
+    "from manage_path import *\n",
+    "from compute_topic import *\n",
+    "\n",
+    "data = load_data('TRACE2014_jinming.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dc_v1 = compute_Dc_v1(data)\n",
+    "compute_corpus(Dc_v1,'Dc_v1')\n",
+    "compute_id2word(Dc_v1,'Dc_v1')\n",
+    "del Dc_v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dc_v2 = compute_Dc_v2(data)\n",
+    "compute_corpus(Dc_v2,'Dc_v2')\n",
+    "compute_id2word(Dc_v2,'Dc_v2')\n",
+    "del Dc_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dc_v3 = compute_Dc_v3(data)\n",
+    "compute_corpus(Dc_v3,'Dc_v3')\n",
+    "compute_id2word(Dc_v3,'Dc_v3')\n",
+    "del Dc_v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_document(first,second,third):\n",
+    "    return str(first) + ',' + str(second) + ',' + str(third)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating documents ......\n",
+      "documents created!!\n",
+      "computing Tc_v1 ......\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Compute Tc_v1 which is a document will represent the triple (seller, bond, buyer, date) directly\"\"\"\n",
+    "create_document_vectorize = np.vectorize(create_document)\n",
+    "print(\"creating documents ......\")\n",
+    "# Add new column Dc_v3 which is the string representation of report dealer buy on the specific day\n",
+    "data['Tc_v1_S_B_D'] = create_document_vectorize(data['Report_Dealer_Index'].values , data['Contra_Party_Index'].values , data['document_date'].values)\n",
+    "print(\"documents created!!\")\n",
+    "\n",
+    "data_gb = data.groupby(by=['Tc_v1_S_B_D','BOND_SYM_ID'])\n",
+    "\n",
+    "print(\"computing Tc_v1 ......\")\n",
+    "Tc_v1 = data_gb['BOND_SYM_ID'].size().astype(np.int16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tc_v1 = compute_Tc_v1(data)\n",
+    "compute_corpus(Tc_v1,'Tc_v1')\n",
+    "compute_id2word(Tc_v1,'Tc_v1')\n",
+    "del Tc_v1"
    ]
   },
   {
@@ -684,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
