--- a/TopicModeling/topic_modeling_data_preparation.ipynb
+++ b/TopicModeling/topic_modeling_data_preparation.ipynb
@@ -295,19 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading data TRACE2014_jinming.pkl...\n",
-      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming.pkl...\n",
-      "Data getting success!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from get_data import load_data\n",
     "from manage_path import *\n",
@@ -359,29 +349,23 @@
    "outputs": [],
    "source": [
     "def create_document(first,second,third):\n",
-    "    return str(first) + ',' + str(second) + ',' + str(third)"
+    "    return str(first) + ',' + str(second) + ',' + str(third)\n",
+    "def document_date2year(date):\n",
+    "    return str(date[0:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating documents ......\n",
-      "documents created!!\n",
-      "computing Tc_v1 ......\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"Compute Tc_v1 which is a document will represent the triple (seller, bond, buyer, date) directly\"\"\"\n",
     "create_document_vectorize = np.vectorize(create_document)\n",
+    "document_date2year_vectorize = np.vectorize(document_date2year)\n",
     "print(\"creating documents ......\")\n",
     "# Add new column Dc_v3 which is the string representation of report dealer buy on the specific day\n",
+    "data['document_date'] = document_date2year_vectorize(data['document_date'].values)\n",
     "data['Tc_v1_S_B_D'] = create_document_vectorize(data['Report_Dealer_Index'].values , data['Contra_Party_Index'].values , data['document_date'].values)\n",
     "print(\"documents created!!\")\n",
     "\n",
@@ -389,6 +373,15 @@
     "\n",
     "print(\"computing Tc_v1 ......\")\n",
     "Tc_v1 = data_gb['BOND_SYM_ID'].size().astype(np.int16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tc_v1"
    ]
   },
   {
