topic model + analysis

--- a/TopicModeling/topic_modeling_gensimLDA_analysis.ipynb
+++ b/TopicModeling/topic_modeling_gensimLDA_analysis.ipynb
@@ -128,9 +128,9 @@
     "    # Only get the top three topics per document\n",
     "    document_topic_distribution_pandas = document_topic_distribution_pandas[document_topic_distribution_pandas.rank(axis=1,method='max',ascending=False) <= 3]\n",
     "    # Save the dataframe to csv\n",
-    "    #result_directory = get_result_directory()\n",
-    "    #if not result_directory.is_dir():\n",
-    "    #    create_directory()\n",
+    "    result_directory = get_result_directory()\n",
+    "    if not result_directory.is_dir():\n",
+    "        create_directory()\n",
     "    document_topic_distribution_pandas.to_csv('../Results/{}_{}topics.csv'.format(model_name,topics))"
    ]
   },
