--- a/TopicModeling/topic_modeling_gensimLDA_compute.ipynb
+++ b/TopicModeling/topic_modeling_gensimLDA_compute.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -55,136 +55,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading data TRACE2014_jinming.pkl...\n",
-      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming.pkl...\n",
-      "Data getting success!\n",
-      "creating documents ......\n",
-      "documents created!!\n",
-      "computing Dc_v4 ......\n",
-      "computing Dc_v4 done!\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "compute_corpus() missing 1 required positional argument: 'corpus_save_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-077bd72960e7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'TRACE2014_jinming.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mDc_v4\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_Dc_v4\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mDc_v4_corpus\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_corpus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDc_v4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0msave_corpus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDc_v4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Dc_v4'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcompute_id2word\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDc_v4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Dc_v4'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: compute_corpus() missing 1 required positional argument: 'corpus_save_name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_data('TRACE2014_jinming.pkl')\n",
     "Dc_v4 = compute_Dc_v4(data)\n",
     "\n",
-    "save_corpus(Dc_v4,'Dc_v4')\n",
+    "compute_corpus(Dc_v4,'Dc_v4')\n",
+    "#save_corpus(Dc_v4,'Dc_v4')\n",
     "compute_id2word(Dc_v4,'Dc_v4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Dc_v4_corpus = compute_corpus(Dc_v4,'Dc_v4')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading corpus...\n",
-      "corpus successfully loaded!!\n",
-      "MmCorpus(325885 documents, 12077 features, 9232728 non-zero entries)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<gensim.corpora.mmcorpus.MmCorpus at 0x14447440e58>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "load_corpus('Dc_v4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading corpus...\n",
-      "corpus successfully loaded!!\n",
-      "MmCorpus(157935 documents, 11131 features, 4055111 non-zero entries)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<gensim.corpora.mmcorpus.MmCorpus at 0x14447440bd8>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_corpus('Dc_v3')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading corpus...\n",
-      "corpus successfully loaded!!\n",
-      "MmCorpus(196451 documents, 12077 features, 8036258 non-zero entries)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<gensim.corpora.mmcorpus.MmCorpus at 0x1440652e278>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_corpus('Dc_v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_corpus('Dc_v1')"
    ]
   },
   {
