update code quality

--- a/TopicModeling/topic_modeling_gensimLDA_analysis.ipynb
+++ b/TopicModeling/topic_modeling_gensimLDA_analysis.ipynb
@@ -473,14 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = \"Dc_v4\"\n",
     "heatmap_data = [\n",
     "    go.Heatmap(\n",
-    "        z=preprocessing.scale(df_topicXtime_sum),\n",
+    "        z=preprocessing.minmax_scale(df_topicXtime_sum,feature_range=(0, 10)),\n",
     "        #zmin=0,\n",
     "        #zmax=1,\n",
     "        x=df_topicXtime_sum.columns,\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
      "text": [
       "C:\\Users\\raymo\\Anaconda3\\envs\\topicModeling\\lib\\site-packages\\ipykernel_launcher.py:4: DataConversionWarning:\n",
       "\n",
-      "Data with input dtype int64 were all converted to float64 by the scale function.\n",
+      "Data with input dtype int64 were all converted to float64.\n",
       "\n"
      ]
     }
@@ -571,7 +571,7 @@
     "model_name = \"Dc_v4\"\n",
     "heatmap_data = [\n",
     "    go.Heatmap(\n",
-    "        z=preprocessing.scale(df_topicXtime_count),\n",
+    "        z=preprocessing.minmax_scale(df_topicXtime_count,feature_range=(0, 10)),\n",
     "        #zmin=0,\n",
     "        #zmax=1,\n",
     "        x=df_topicXtime_count.columns,\n",
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
