--- a/TopicModeling/topic_modeling_gensimLDA_compute.ipynb
+++ b/TopicModeling/topic_modeling_gensimLDA_compute.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -150,9 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading corpus...\n",
+      "corpus successfully loaded!!\n",
+      "MmCorpus(153916 documents, 12077 features, 6576545 non-zero entries)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.corpora.mmcorpus.MmCorpus at 0x12f5d62ef48>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_corpus('Dc_v4')"
    ]
