--- a/TopicModeling/data_analysis.ipynb
+++ b/TopicModeling/data_analysis.ipynb
@@ -24,12 +24,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Stats on data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
+    "data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.columns"
    ]
   },
   {
@@ -69,12 +85,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Dc_v4_test = compute_Dc_v4_test(data)"
+    "### Dealer trading amount"
    ]
   },
   {
@@ -83,7 +97,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dc_v4_test.values.sum()"
+    "data.eval('trading_cap = ENTRD_VOL_QT * RPTD_PR',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.groupby('Report_Dealer_Index')['trading_cap'].sum().sort_values(ascending=False).head(100).to_frame().to_html('trading_cap.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.groupby('Report_Dealer_Index')['trading_cap'].sum().sort_values(ascending=False).head(100).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.groupby('Report_Dealer_Index')['trading_cap'].sum().sort_values(ascending=False).tail(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.groupby('Contra_Party_Index')['trading_cap'].sum().sort_values(ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[['Report_Dealer_Index','trading_cap']].append(data[['Contra_Party_Index','trading_cap']])"
    ]
   },
   {
